Updated version numbers
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>